<resources>
    <string name="app_name">HW08</string>
    <string name="name" />
    <string name="firstname" />
    <string name="lastname" />
    <string name="email" />
    <string name="repassword" />
    <string name="password" />
    <string name="fname" />
    <string name="message" />
    <string name="xyz" />
    <string name="jugal" />
    <string name="time" />
    <string name="main_name">Christmas List</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="add_person">Add Person</string>
    <string name="submit_ok">Submit</string>
    <string name="persons_name">Person\'s Name</string>
    <string name="your_budget">Your Budget ($)</string>
    <string name="add_gift">Add Gift</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">$100</string>
    <string name="item_person_name">Person\'s Name</string>
    <string name="item_person_bugdet">$70/$100</string>
    <string name="item_person_gifts">2 gifts bought</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="tcity">Select City:</string>
    <string name="city" />
    <string name="tplaces">Please select places you want to visit in</string>
    <string name="tripname">Trip Name:</string>
    <string name="tripName" />
    <string name="add">Add Trip City</string>
    <string name="sdate">Select Date:</string>
    <string name="selectplaces">Select Places</string>
    <string name="placesname" />
    <string name="checkbox" />
    <string name="title" />
    <string name="dttripname">Trip Name:</string>
    <string name="dtripname" />
    <string name="dtdcity">Destination City:</string>
    <string name="ddcity" />
    <string name="dtdate">"Trip Date:"</string>
    <string name="ddate" />
    <string name="dtplaces">"Places"</string>
    <string name="User">"User:"</string>
    <string name="duser" />
    <string name="hintEmail">Email</string>

</resources>
